--- a/README
+++ b/README
@@ -5,3 +5,14 @@ This was made by NotaKennen, And i added some things such as
 4. Usb devices.
 5. Bluetooth devices.
 6. Background processes.
+
+
+The following code is intended strictly for educational purposes. It is designed to serve as a learning tool, demonstrating concepts and techniques relevant to Python coding. This educational code is not intended for production use or deployment in any operational environment.
+
+The primary goal of sharing this code is to facilitate understanding and hands-on practice for learners, enabling them to grasp theoretical concepts through practical implementation. By studying this code, individuals can gain insights into [describe the specific aspects or functionalities covered], which are essential for their educational journey in [mention the field or subject area].
+
+It's important to note that while efforts have been made to ensure the accuracy and clarity of the code provided, it may not adhere to all best practices or conventions applicable to production-level software. Users are encouraged to adapt and modify the code for experimentation and learning purposes. However, caution should be exercised to avoid directly using this code in live applications without thorough review and appropriate modifications.
+
+In summary, this educational code serves as a valuable resource for educational exploration and skill development in [specify the subject or technology]. Users are encouraged to utilize it responsibly and within the bounds of educational use only."
+
+This statement clarifies the intended use of the code while emphasizing its educational nature and encouraging responsible use.
